--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -24,7 +24,8 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+/* changed div to nav tag */
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +33,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -50,11 +51,12 @@ p {
     font-size: 16px;
 }
 
-.hero {
+/* changed name from hero to background */
+.background {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-image: url("../images/digital-marketing-meeting.jpg") ;
     background-size: cover;
     background-position: center;
 }
@@ -69,7 +71,8 @@ p {
     margin-left: 25px;
 }
 
-.content {
+/* changed name from content to service options */
+.service-options {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
@@ -77,13 +80,16 @@ p {
 
 .benefits {
     margin-right: 20px;
-    padding: 20px;
+    /* fixed padding typo */
+    padding: 20px ;
     clear: both;
     float: right;
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+    /* added margin to resemble challenge page */
+  margin-bottom: 20px;
 }
 
 .benefit-lead {
@@ -177,7 +183,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/* added curly bracket to close section */
 .online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
@@ -190,9 +196,11 @@ p {
 
 .footer {
     padding: 30px;
-    clear: both;
+    clear:both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    /* screenshot in challenge does not display this footer so it has been hidden */
+    display: none;
 }
 
 .footer h2 {
